2007-10-26  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c, doc/cvtool.texi: Improve the mix command.

2007-10-25  Martin Lambers <marlam@marlam.de>

	* configure.ac: Bump package and library versions.
	* cvl/cvl_mix.c, cvl/cvl/cvl_mix.h, cvl/glsl/mix/mix.glsl,
	cvl/Makefile.am: Add new cvl_mix() function.
	* cvtool/cmd_mix.c, cvtool/cvtool.c, cvtool/Makefile.am,
	tests/cmd_mix.sh, tests/Makefile.am, doc/cvtool.texi: Add new mix
	command.
	* NEWS: Update.

2007-10-16  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvtool.texi, doc/cvl.texi, doc/cvtool.1,
	doc/doxy/doxyfile: Bump version numbers and dates for 0.2.2.
	* NEWS: Update for 0.2.2.
	* cvl/cvl/cvl_init.h, cvl/cvl_init.c, gnulib/Makefile.am, 
	gnulib/m4/gnulib-cache.m4, gnulib/m4/gnulib-comp.m4,
	gnulib/m4/strverscmp.m4, gnulib/strverscmp.c, gnulib/strverscmp.h:
	Add the cvl_check_version() function.
	* configure.ac: Bump CVL shared library version number.

2007-10-11  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_color.c: cvl_convert_format_inplace(): Remove extra change
	of format.
	* cvl/cvl_color.c: Fix description of cvl_channel_combine().
	* cvl/cvl_io.c: cvl_write_pnm(): Fix writing of PNM frames with
	unknown format.
	* cvtool/cvtool.c, cvtool/cmd_channelcombine.c,
	cvtool/cmd_channelextract.c, cvtool/Makefile.am, doc/cvtool.texi,
	tests/cmd_channelcombine.sh, tests/cmd_channelextract.sh,
	tests/Makefile.am: Split the channel command into the two new commands
	channelextract and channelcombine for greater flexibility.
	* cvtool/cmd_info.c: Print statistics with higher precision.

2007-10-09  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h, mhlib/mh_os.c, cvtool/cvtool.c: Rename DIRSEP to
	MH_DIRSEP. Update the users accordingly.

2007-09-27  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_info.c: Improve output of the info command.

2007-09-26  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c: Handle rounding errors when computing the standard